# TM2IN

./: .gitignore  CMakeLists.txt  Converter.cpp  LICENSE  Options.cpp  Options.h  README.md  TM2IN.cpp  TVRConverter.cpp  _c_make_c_compiler_id_8c.html  _collada_reader_8cpp.html  _collada_reader_8cpp__incl.md5  _collada_reader_8h__dep__incl.md5  _converter_8cpp.html  _converter_8h__incl.map  _converter_8h__incl.md5  _converter_8h_source.html  _generation_writer_8cpp__incl.md5  _generation_writer_8h__dep__incl.md5  _generation_writer_8h__incl.md5  _half_edge_8h__dep__incl.md5  _indoor_component_8cpp.html  _indoor_component_8cpp__incl.md5  _indoor_component_8h__dep__incl.md5  _indoor_component_8h__incl.map  _indoor_component_8h__incl.md5  _indoor_component_8h_source.html  _json_writer_8cpp__incl.map  _json_writer_8h__dep__incl.map  _json_writer_8h__incl.map  _json_writer_8h__incl.md5  _max3_d_s_reader_8cpp__incl.map  _max3_d_s_reader_8h.html  _max3_d_s_reader_8h__dep__incl.md5  _max3_d_s_reader_8h_source.html  _max3_d_s_writer_8cpp.html  _max3_d_s_writer_8cpp__incl.map  _max3_d_s_writer_8h__dep__incl.md5  _minimum_bounding_box_8cpp.html  _minimum_bounding_box_8h.html  (+392 more)
GeomViewer/: generation.html  misc_controls_trackball.html  untitled.html  v0255.html  v0256.html  v026.html  v0261.html  v027.html  v028.html  v029.html  viewer.html
TriMeshToGeom/: 3dsloader.cpp  3dsloader.h  CGALCalculation.cpp  CGALCalculation.h  CombinedIO.cpp  CombinedIO.h  CombinedPolygon.cpp  CombinedPolygon.hpp  DataImporter.h  Importer.h  JSONMaker.cpp  JSONMaker.h  Manager.h  ManagerImpl.cpp  ManagerImpl.h  Model.h  ObjectCollection.cpp  ObjectCollection.h  Object_Type.cpp  Object_Type.hpp  Printer.h  TVRCollection.cpp  TVRCollection.hpp  TVRConverter.cpp  TVRImporter.cpp  TVRImporter.h  TeeVRToGeom.cpp  TriangleSpace.cpp  TriangleSpace.h  Trinagle.cpp  Trinagle.h  VectorCalculation.cpp  VectorCalculation.h  check.cpp  check.hpp  convert.h  load3ds.cpp  load3ds.h  main.cpp  model.h  (+6 more)
algorithm/: Polygonizer.cpp  Polygonizer.h  collinear.cpp  collinear.h  compare.cpp  compare.h  mbb.cpp  mbb.h  merge_surfaces.cpp  merge_surfaces.h  pca.cpp  pca.h  triangulation.cpp  triangulation.h
cgal/: CGALCalculation.cpp  CGALCalculation.h  Features_to_CGAL_object.cpp  Features_to_CGAL_object.h  PolygonComputation.cpp  PolygonComputation.h  Polygon_mesh_processing.cpp  Polygon_mesh_processing.h  SurfaceHoleCover.cpp  SurfaceHoleCover.h  SurfaceIntersection.cpp  SurfaceIntersection.h  Types.h  polyhedron.cpp  polyhedron.h  triangle.cpp  triangle.h  vector_angle.cpp  vector_angle.h
command/: Command.cpp  Command.h  Merge_Command.cpp  Merge_Command.h
compute/: Connect_halfedges.cpp  Connect_halfedges.h  HalfEdgeComputation.cpp  HalfEdgeComputation.h  SurfaceComputation.cpp  SurfaceComputation.h  SurfacePairComputation.cpp  SurfacePairComputation.h  Surface_pair_computation.cpp  Surface_pair_computation.h  SurfacesListComputation.cpp  SurfacesListComputation.h  TriangleListComputation.cpp  TriangleListComputation.h  VertexComputation.cpp  VertexComputation.h  VertexListComputation.cpp  VertexListComputation.h  unused.cpp  unused.h
converter/: Converter.cpp  Converter.h  TriangulationConverter.cpp  TriangulationConverter.h  run.cpp  start.cpp
detail/: cgal_config.h
doc/: Doxyfile  mainpage.h  usage-manual.md
doxygen/: _c_make_c_x_x_compiler_id_8cpp.html  _collada_reader_8cpp__incl.map  _collada_reader_8h.html  _collada_reader_8h__dep__incl.map  _collada_reader_8h__incl.map  _collada_reader_8h__incl.md5  _collada_reader_8h_source.html  _converter_8cpp__incl.map  _converter_8cpp__incl.md5  _converter_8h.html  _converter_8h__dep__incl.map  _converter_8h__dep__incl.md5  _generation_writer_8cpp.html  _generation_writer_8cpp__incl.map  _generation_writer_8h.html  _generation_writer_8h__dep__incl.map  _generation_writer_8h__incl.map  _generation_writer_8h_source.html  _half_edge_8cpp.html  _half_edge_8cpp__incl.map  _half_edge_8cpp__incl.md5  _half_edge_8h.html  _half_edge_8h__dep__incl.map  _half_edge_8h__incl.map  _half_edge_8h__incl.md5  _half_edge_8h_source.html  _indoor_component_8cpp__incl.map  _indoor_component_8h.html  _indoor_component_8h__dep__incl.map  _json_writer_8cpp.html  _json_writer_8cpp__incl.md5  _json_writer_8h.html  _json_writer_8h__dep__incl.md5  _json_writer_8h_source.html  _max3_d_s_reader_8cpp.html  _max3_d_s_reader_8cpp__incl.md5  _max3_d_s_reader_8h__dep__incl.map  _max3_d_s_reader_8h__incl.map  _max3_d_s_reader_8h__incl.md5  _max3_d_s_writer_8cpp__incl.md5  (+399 more)
features/: Geometry.cpp  Geometry.h  Graph.h  HalfEdge.cpp  HalfEdge.h  IndoorComponent.cpp  IndoorComponent.h  MinimumBoundingBox.cpp  MinimumBoundingBox.h  PolyhedralSurface.cpp  PolyhedralSurface.h  Room.cpp  Room.h  Segment.cpp  Segment.h  Solid.cpp  Solid.h  Space.cpp  Space.h  Surface.cpp  Surface.h  Surface.hpp  SurfaceGraph.cpp  SurfaceGraph.h  Triangle.cpp  Triangle.h  TriangleMesh.cpp  TriangleMesh.h  TriangleMeshGraph.cpp  TriangleMeshGraph.h  Vertex.cpp  Vertex.h  Wall.cpp  Wall.h  vertex.cpp
fileio/: GenerationWriter.cpp  GenerationWriter.h  Importer.h  JSONMaker.cpp  JSONMaker.h  TVRImporter.cpp  TVRImporter.h
io/: GenerationWriter.cpp  GenerationWriter.h  JSONMaker.cpp  JSONMaker.h  MeshImporter.cpp  MeshImporter.h  code_3DS.h  collada.cpp  collada.h  json.cpp  json.h  max3ds.cpp  max3ds.h  tvr.cpp  tvr.h  xml.cpp  xml.h
logic/: CGALCalculation.cpp  CGALCalculation.h  CleanPolygonMaker.h  SurfacesListCalculation.cpp  SurfacesListCalculation.h  check.cpp  check.h  check.hpp
manage/: ClusteringRoomMaker.cpp  ClusteringRoomMaker.h  CombineParameter.h  MergingRoomMaker.cpp  MergingRoomMaker.h  RoomMaker.cpp  RoomMaker.h
polygonizer/: DividedPolygonizer.cpp  (+10 more)
(+324 files in other folders)
